--- a/vignettes/documentation.Rmd
+++ b/vignettes/documentation.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Introduction to plausiblebounds: Computing Plausible Bounds for Treatment Path Estimates"
+title: "Introduction to plausibounds: Computing Plausible Bounds for Treatment Path Estimates"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction to plausiblebounds}
+  %\VignetteIndexEntry{Introduction to plausibounds}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -11,16 +11,15 @@ vignette: >
 
 
 ``` r
-library(plausiblebounds)
-#> Error in library(plausiblebounds): there is no package called 'plausiblebounds'
+library(plausibounds)
 library(ggplot2)
 ```
 
 ## Overview
 
-When estimating treatment effect paths from event studies or dynamic panel data models, researchers often face a tension: pointwise confidence intervals fail to account for multiple testing, while uniform confidence bands (such as sup-t bands) can be too wide to provide useful inference. The `plausiblebounds` package implements methods from Freyaldenhoven and Hansen (2025) that provide an intermediate solution through **restricted bounds**—confidence regions that adapt to the smoothness and correlation structure of the data while maintaining valid post-selection coverage.
+When estimating treatment effect paths from event studies or dynamic panel data models, researchers often face a tension: pointwise confidence intervals fail to account for multiple testing, while uniform confidence bands (such as sup-t bands) can be too wide to provide useful inference. The `plausibounds` package implements methods from Freyaldenhoven and Hansen (2025) that provide an intermediate solution through *restricted bounds*: confidence regions that adapt to the smoothness and correlation structure of the data with valid post-selection coverage.
 
-### Treatment Path Setup
+## Background
 
 Let $\hat{\beta} = (\hat{\beta}_1, \ldots, \hat{\beta}_H)$ denote estimates of treatment effects at horizons $h=1,\dots,H$, with
 
@@ -28,22 +27,27 @@ $$
 \hat{\beta} \sim N(\beta, V_\beta),
 $$
 
-where $\beta$ is the true treatment path and $V_{\beta}$ is the variance-covariance matrix. This setup encompasses common estimators including distributed lag models, local projections, and two-way fixed effects event studies.
+where $\beta$ is the true treatment path vector and $V_{\beta}$ is the variance matrix. This setup encompasses common estimators like distributed lag models, local projections, and two-way fixed effects event studies.
 
-## Theoretical Background: Restricted Bounds
+### Finding the surrogate path
 
-The key innovation of this package is the construction of **restricted bounds** through a data-driven surrogate path. Rather than attempting uniform coverage of the raw noisy estimates, restricted bounds provide valid inference for a smoothed approximation that may capture the policy-relevant features of the treatment path more clearly.
+The key contribution of this research is the construction of restricted bounds via a data-driven "surrogate path." Rather than attempting uniform coverage of the raw estimates, restricted bounds provide valid inference for a smoothed approximation of the true treatment path and thus may better capture policy-relevant features.
+The approximation is restricted to a set of reasonable path shapes, and specifically, the dynamic effect is assumed to be (1) smooth and (2) to die off eventually. 
 
-### Surrogate Paths and Model Selection
-
-The approach approximates $\beta$ by a **surrogate path** $\beta_M = P(M)\beta$, where $M$ indexes a model in a pre-specified universe $\mathcal{M}$. The model universe includes polynomial specifications (constant, linear, quadratic, cubic) as well as penalized smoothing approaches that shrink first and third differences.
+The approach approximates $\beta$ by a *surrogate path* $\beta_M = P(M)\beta$, where $M$ indexes a model in a pre-specified universe $\mathcal{M}$, alluded to above. The model universe is specified a priori and includes polynomial specifications (up to cubic) and penalized smoothing that shrinks first (effect is "smooth") and third (effects "die off") differences. 
 
 Given estimates $\hat{\beta}$, the surrogate for a given model $M$ is obtained by solving a penalized least squares problem:
 
 $$
-\tilde{\beta}(M) = \arg\min_b \Big[ (\hat{\beta} - b)'V_\beta^{-1}(\hat{\beta} - b)
-  + \lambda_1 b'D_1'W_1(K)D_1 b
-  + \lambda_2 b'D_3'W_3 D_3 b \Big],
+\begin{align}
+\tilde{\beta}(M)
+&= \tilde{\beta}(\lambda_1, \lambda_2, K) \\
+&= \arg\min_{b}\Bigg(
+\underbrace{(\hat{\beta}-b)^{\prime}V^{-1}(\hat{\beta}-b)}_{\text{distance from $\hat{\beta}$}}
++\lambda_1\,\underbrace{b^{\prime}D_1^{\prime}W_1(K)D_1 b}_{\text{penalty on first difference after horizon $K$}}
++\lambda_2\,\underbrace{b^{\prime}D_3^{\prime}W_3 D_3 b}_{\text{penalty on third difference}}
+\Bigg).
+\end{align}
 $$
 
 where $D_1$ and $D_3$ are first- and third-difference operators, and $\lambda_1$, $\lambda_2$, and $K$ are tuning parameters that control smoothness and the timing of decay toward zero. The solution has closed form:
@@ -58,7 +62,7 @@ $$
 \hat{M} = \arg\min_{M \in \mathcal{M}} \; (\hat{\beta}-\tilde{\beta}(M))'V_\beta^{-1}(\hat{\beta}-\tilde{\beta}(M)) + \log(H)\,\text{df}(M),
 $$
 
-where the degrees of freedom is $\text{df}(M) = \mathrm{trace}(P(M))$.
+where the degrees of freedom is $\text{df}(M) = \mathrm{trace}(P(M))$. Therefore, the main algorithm of the package simply iterates over all models in the pre-specified universe to find $$\hat{M}$$. 
 
 ### Post-Selection Inference
 
@@ -68,9 +72,7 @@ $$
 \Pr\!\big(\beta_{\hat{M}} \in \text{CR}_{\text{PoSI}}\big) \ge 1-\alpha.
 $$
 
-This is a critical distinction: the restricted bounds provide uniform coverage for the *selected surrogate path* (a data-dependent smoothed approximation), not the true treatment path itself. Because the surrogate is smoother and may be more interpretable than the raw estimates, this inferential target may be more useful for policy analysis while remaining statistically rigorous.
-
-The restricted bounds can be especially informative when the treatment path is expected to be relatively smooth (as in many economic applications) and when there is substantial correlation in the estimation errors across horizons. In these settings, restricted bounds can remain informative even when traditional sup-t bands become too wide to draw meaningful conclusions.
+The restricted bounds provide uniform coverage for the *selected surrogate path*, not the true treatment path itself. Because the surrogate is smoother than the raw estimates, this inferential target may be more interpretable for policy analysis.
 
 
 ## Basic Usage
@@ -94,7 +96,7 @@ dim(var_corr)
 #> [1] 12 12
 ```
 
-The `estimates_wiggly` vector contains 12 treatment effect estimates at different horizons. The `var_iid` matrix is a diagonal variance-covariance matrix (independent errors), while `var_corr` includes correlation across horizons.
+The `estimates_wiggly` vector contains 12 treatment effect estimates at different horizons. The `var_iid` matrix is a diagonal variance-covariance matrix (independent errors), while `var_corr` includes positive correlation across horizons.
 
 ### Example 1: Independent Errors
 
@@ -110,7 +112,7 @@ pb_iid <- plausible_bounds(
 #> Calculating restricted bounds: ■■■■■■                           K = 2/11 [ 18%]Calculating restricted bounds: ■■■■■■■■■                        K = 3/11 [ 27%]Calculating restricted bounds: ■■■■■■■■■■■■                     K = 4/11 [ 36%]Calculating restricted bounds: ■■■■■■■■■■■■■■■                  K = 5/11 [ 45%]Calculating restricted bounds: ■■■■■■■■■■■■■■■■■                K = 6/11 [ 55%]Calculating restricted bounds: ■■■■■■■■■■■■■■■■■■■■             K = 7/11 [ 64%]Calculating restricted bounds: ■■■■■■■■■■■■■■■■■■■■■■■          K = 8/11 [ 73%]Calculating restricted bounds: ■■■■■■■■■■■■■■■■■■■■■■■■■■       K = 9/11 [ 82%]Calculating restricted bounds: ■■■■■■■■■■■■■■■■■■■■■■■■■■■■     K = 10/11 [ 91%]Calculating restricted bounds: ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■  K = 11/11 [100%]
 ```
 
-The returned object is a list containing the bounds, test statistics, and metadata. The `summary()` method extracts the key results in a tabular format, showing the horizon, coefficient estimates, and restricted bounds:
+The returned object is a list containing the bounds, test statistics, and metadata. The `summary()` method extracts the key results in a tabular format, showing the horizon, original coefficient estimates, surrogate path, and restricted bounds for that path:
 
 
 ``` r
@@ -137,19 +139,63 @@ For a more detailed view of the object structure:
 
 
 ``` r
-str(pb_iid, max.level = 1)
+str(pb_iid)
 #> List of 7
 #>  $ preperiods                : num 0
 #>  $ wald_test                 :List of 1
+#>   ..$ post:List of 2
+#>   .. ..$ statistic: num 55.8
+#>   .. ..$ p_value  : num 1.29e-07
 #>  $ restricted_bounds         :'data.frame':	12 obs. of  5 variables:
+#>   ..$ horizon  : int [1:12] 1 2 3 4 5 6 7 8 9 10 ...
+#>   ..$ coef     : num [1:12] 0.0955 -0.1086 -0.2968 -0.3263 -0.4483 ...
+#>   ..$ surrogate: num [1:12] 0.08 -0.125 -0.257 -0.329 -0.354 ...
+#>   ..$ lower    : num [1:12] -0.253 -0.328 -0.455 -0.534 -0.546 ...
+#>   ..$ upper    : num [1:12] 0.4128 0.078 -0.0592 -0.124 -0.1616 ...
 #>  $ restricted_bounds_metadata:List of 10
+#>   ..$ alpha             : num 0.05
+#>   ..$ width             : num 0.448
+#>   ..$ supt_critval      : num 2.85
+#>   ..$ supt_b            : num 3.18
+#>   ..$ degrees_of_freedom: int 4
+#>   ..$ K                 : logi NA
+#>   ..$ lambda1           : logi NA
+#>   ..$ lambda2           : logi NA
+#>   ..$ surrogate_class   : chr "polynomial"
+#>   ..$ best_fit_model    :List of 5
+#>   .. ..$ d   : num [1:12, 1] 0.08 -0.125 -0.257 -0.329 -0.354 ...
+#>   .. ..$ Vd  : num [1:12, 1:12] 0.01096 0.005009 0.001171 -0.000937 -0.001697 ...
+#>   .. ..$ MD  : num [1, 1] 4.05
+#>   .. ..$ J   : cplx [1:12, 1:12] 0.739+0i 0.552+0i 0.133+0i ...
+#>   .. ..$ pval: num [1, 1] 0.853
 #>  $ avg_treatment_effect      :List of 5
+#>   ..$ estimate: num -0.236
+#>   ..$ se      : num 0.0364
+#>   ..$ bounds  :List of 2
+#>   .. ..$ lb: num -0.307
+#>   .. ..$ ub: num -0.165
+#>   ..$ alpha   : num 0.05
+#>   ..$ width   : num 0.143
 #>  $ pointwise_bounds          :List of 3
+#>   ..$ lower  : num [1:12] -0.139 -0.345 -0.536 -0.568 -0.692 ...
+#>   ..$ upper  : num [1:12] 0.3298 0.1279 -0.0579 -0.0852 -0.2048 ...
+#>   ..$ critval: num 1.96
 #>  $ supt_bounds               :List of 3
+#>   ..$ lower  : num [1:12] -0.249 -0.457 -0.648 -0.681 -0.807 ...
+#>   ..$ upper  : num [1:12] 0.4403 0.2395 0.0547 0.0286 -0.09 ...
+#>   ..$ critval: num 2.88
 #>  - attr(*, "class")= chr "plausible_bounds"
 ```
 
-The object contains several components. The `restricted_bounds` data frame includes the point estimates (`coef`), surrogate path (`surrogate`), and the lower and upper restricted bounds for each horizon. The `restricted_bounds_metadata` list stores important information about the model selection process, including the surrogate class selected (e.g., polynomial degree or penalized smoothing parameters), the degrees of freedom, and the sup-t critical value used in constructing the bounds. The `avg_treatment_effect` component provides the average treatment effect estimate, its standard error, and confidence interval. When `include_pointwise` and `include_supt` are `TRUE` (the default), the object also contains `pointwise_bounds` and `supt_bounds` lists with the alternative confidence bounds. Finally, `wald_test` contains test statistics and p-values for testing the null hypothesis of no treatment effect.
+The object contains several components. The `restricted_bounds` data frame is identical to that produced with the `summary()` method. 
+The `restricted_bounds_metadata` list stores important information about the model selection process, including the surrogate class selected (e.g., polynomial degree or penalized smoothing parameters), the degrees of freedom, and the sup-t critical value used in constructing the bounds. 
+The `avg_treatment_effect` component provides the average treatment effect estimate, its standard error, and confidence interval. 
+When arguments `include_pointwise` and `include_supt` of `plausible_bounds()` are `TRUE` (the default), the object also contains `pointwise_bounds` and `supt_bounds` lists with the corresponding confidence bounds. 
+Finally, `wald_test` contains test statistics and p-values for testing the joint null hypothesis of no treatment effect.
+
+### Visualization with `create_plot()`
+
+Next let's plot the results:
 
 
 ``` r
@@ -161,23 +207,21 @@ create_plot(pb_iid)
 <p class="caption">Plausible bounds for treatment path estimates with independent errors</p>
 </div>
 
-### Understanding the Plot Elements
-
 The plot displays several types of bounds and statistics, each serving a different inferential purpose:
 
-**Point estimates (black dots)**: The raw treatment effect estimates $\hat{\beta}_h$ at each horizon. These are the starting point but provide no information about uncertainty.
+**Point estimates (black dots)**: The original treatment effect estimates $\hat{\beta}_h$ at each horizon. 
 
-**Restricted bounds (blue dashed lines)**: The main contribution of this package. These bounds provide uniform $(1-\alpha)$ coverage for the selected surrogate path (the smooth blue line), not the true treatment path itself. The surrogate path is chosen via BIC from the model universe and represents a data-dependent smoothed approximation to the true treatment path. The restricted bounds adapt to the smoothness and correlation structure, often remaining narrow enough to be informative.
+**Restricted bounds (blue dashed lines)**: The main contribution of this package. These bounds provide uniform $(1-\alpha)$ coverage for the selected surrogate path (the smooth blue line), not the true treatment path itself. The surrogate path is chosen via BIC from the pre-specified model universe and represents a data-dependent smoothed approximation to the true treatment path. The restricted bounds adapt to the smoothness and correlation structure, often remaining narrower than sup-t intervals.
 
-**Pointwise bounds (gray horizontal bars)**: Standard confidence intervals for each horizon separately, constructed as $\hat{\beta}_h \pm z_{1-\alpha/2} \sqrt{V_{\beta,hh}}$. These do not account for multiple testing and should not be used for simultaneous inference across horizons.
+**Pointwise bounds (gray horizontal bars)**: Standard confidence intervals for each horizon separately, constructed as $\hat{\beta}_h \pm z_{1-\alpha/2} \sqrt{V_{\beta,hh}}$. 
 
-**Sup-t bounds (gray vertical lines)**: Uniform confidence bands that provide $(1-\alpha)$ joint coverage of the entire treatment path. These are constructed using the critical value from the supremum of $t$-statistics. While they guarantee full-path coverage, they can become very wide when there are many horizons or strong correlation.
+**Sup-t bounds (gray vertical lines)**: Uniform confidence bands that provide $(1-\alpha)$ joint coverage of the entire treatment path. These are constructed using the supremum of $t$-statistics from individual coefficients. Guarantee full-path coverage but can become quite wide.
 
-**Annotations**: The bottom of the plot shows several summary statistics. The "No effect p-value" comes from a Wald test of the null hypothesis that all treatment effects are zero. The "Average effect [CI]" provides the average treatment effect (ATE) $\bar{\beta} = \frac{1}{H}\sum_h \beta_h$ along with its confidence interval—this quantifies the overall magnitude of the treatment while remaining narrow even when individual horizons are uncertain.
+**Annotations**: The bottom of the plot shows several summary statistics. The "No effect p-value" comes from a Wald test of the null hypothesis that all treatment effects are zero. The "Average effect [CI]" provides the average treatment effect (ATE) $\bar{\beta} = \frac{1}{H}\sum_h \beta_h$ along with its confidence interval—this quantifies the overall magnitude of the treatment.
 
 ### Example 2: Correlated Errors
 
-When errors are correlated across horizons (common in dynamic settings), the restricted bounds adapt to the correlation structure. While high correlation can widen the restricted bounds compared to the independent error case, they often remain substantially narrower than sup-t bands:
+When errors are correlated across horizons (common in dynamic settings), the restricted bounds adapt to the correlation structure. While high correlation can widen the restricted bounds compared to the independent error case, they usually remain narrower than sup-t bands:
 
 
 ``` r
@@ -196,26 +240,12 @@ create_plot(pb_corr)
 <p class="caption">Plausible bounds for treatment path estimates with correlated errors</p>
 </div>
 
-In this example, the restricted bounds are wider than in the IID case due to the correlation structure, but still provide much more informative inference than the sup-t bands, which have become quite wide.
+In this example, the restricted bounds are wider than in the IID case due to the correlation structure.
 
 
-## Event Studies with Pre-Treatment Periods
+## Pre-Treatment Periods
 
-The package supports event study designs where some periods occur before treatment. This allows testing for pre-trends and distinguishing them from treatment effects. When specifying the `preperiods` argument, the function automatically computes two Wald tests: one testing $H_0$: no pre-trends in the pre-treatment periods, and another testing $H_0$: no treatment effect in the post-treatment periods. Both p-values appear in the plot annotations.
-
-
-``` r
-# Load pre-trends dataset
-data(estimates_pretrends)
-data(var_pretrends)
-
-# Examine structure (6 pre-treatment + 6 post-treatment periods)
-print(estimates_pretrends)
-#>  [1] -0.4735980 -0.7570933 -0.9515343 -0.7072245 -1.0347901 -1.0508887
-#>  [7] -0.8994436 -1.0287310 -1.0618578 -1.0832139 -1.1091063 -1.2844106
-dim(var_pretrends)
-#> [1] 12 12
-```
+The package supports designs where some periods occur before treatment. This allows testing for pre-trends and distinguishing them from treatment effects. When specifying the `preperiods` argument, the function automatically computes two Wald tests: one testing $H_0$: no pre-trends in the pre-treatment periods, and another testing $H_0$: no treatment effect in the post-treatment periods. Both p-values appear in the plot annotations.
 
 ### Specifying Pre-Treatment Periods
 
@@ -223,69 +253,40 @@ Use the `preperiods` argument to indicate how many of the initial estimates corr
 
 
 ``` r
+data(estimates_pretrends)
+#> Warning in data(estimates_pretrends): data set 'estimates_pretrends' not found
+data(var_pretrends)
+#> Warning in data(var_pretrends): data set 'var_pretrends' not found
+
 pb_event <- plausible_bounds(
   estimates = estimates_pretrends,
   var = var_pretrends,
   alpha = 0.05,
   preperiods = 6  # First 6 elements are pre-treatment periods
 )
-#> Warning in setup_grid(20, loglam1_range, loglam2_range, K, var, 4, target_df):
-#> Few gridpoints in range, results may be suboptimal
-#> Warning in setup_grid(20, loglam1_range, loglam2_range, K, var, 4, target_df):
-#> Few gridpoints in range, results may be suboptimal
-#> Calculating restricted bounds: ■■■■■■■■■■■■■■■■■■■■■■■■■        K = 4/5 [ 80%]Calculating restricted bounds: ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■  K = 5/5 [100%]
+#> Error: object 'estimates_pretrends' not found
 
 print(pb_event)
-#> Plausible Bounds Results
-#> ========================
-#> 
-#> Wald Tests:
-#>   Post-treatment (H0: no effect): stat = 221.419, p = 0.0000
-#>   Pre-treatment (H0: no pre-trends): stat = 157.104, p = 0.0000
-#> 
-#> Average Treatment Effect:
-#>   Estimate: -1.0778 (SE: 0.0741)
-#>   95% CI: [-1.2231, -0.9325]
-#> 
-#> Restricted Bounds:
-#>   Surrogate class: polynomial
-#>   Degrees of freedom: 2.00
-#>   Average width: 0.5212
-#> 
-#> Bounds by horizon:
-#>  horizon       coef  surrogate     lower      upper
-#>       -6 -0.4735980         NA        NA         NA
-#>       -5 -0.7570933         NA        NA         NA
-#>       -4 -0.9515343         NA        NA         NA
-#>       -3 -0.7072245         NA        NA         NA
-#>       -2 -1.0347901         NA        NA         NA
-#>       -1 -1.0508887         NA        NA         NA
-#>        1 -0.8994436 -0.9085589 -1.223084 -0.5940333
-#>        2 -1.0287310 -0.9773018 -1.225144 -0.7294593
-#>        3 -1.0618578 -1.0460447 -1.254296 -0.8377937
-#>        4 -1.0832139 -1.1147876 -1.326339 -0.9032361
-#>        5 -1.1091063 -1.1835305 -1.439622 -0.9274395
-#>        6 -1.2844106 -1.2522734 -1.577626 -0.9269210
+#> Error: object 'pb_event' not found
 ```
 
 
 ``` r
 create_plot(pb_event)
+#> Error: object 'pb_event' not found
 ```
-
-<div class="figure" style="text-align: center">
-<img src="figs/plot-pretrends-1.png" alt="Event study with pre-treatment periods showing pre-trends"  />
-<p class="caption">Event study with pre-treatment periods showing pre-trends</p>
-</div>
 
 The vertical dashed line at event time 0 separates pre- and post-treatment periods. Pre-treatment estimates appear at negative horizons, revealing any pre-existing trends. The restricted bounds and surrogate path are only computed for the post-treatment periods, since the goal is inference on the treatment effect path.
 
 The annotations now include both Wald test p-values. The "Pretrends p-value" tests whether the pre-treatment coefficients are jointly zero—a rejection indicates violations of parallel trends. The "No effect p-value" tests whether the post-treatment coefficients are jointly zero. In this example, the pre-trends test rejects, suggesting that parallel trends may not hold.
 
 
-## Controlling Visualization
+## Customizing plots
 
-The `create_plot()` function provides several arguments to customize which elements appear in the plot. The `show_annotations` argument controls whether the Wald test results and average treatment effect are displayed at the bottom. The `show_supt` and `show_pointwise` arguments control whether sup-t and pointwise bounds are included. For a cleaner display focusing only on the restricted bounds:
+The `create_plot()` function provides a few arguments to customize which elements appear in the plot. 
+The `show_annotations` argument controls whether the Wald test results and average treatment effect are displayed at the bottom. 
+The `show_supt` and `show_pointwise` arguments control whether sup-t and pointwise bounds are included. 
+For a cleaner display focusing only on the restricted and pointwise bounds:
 
 
 ``` r
